minor changes in login form

--- a/login.html
+++ b/login.html
@@ -8,8 +8,8 @@
 			<form action="#">
 				<h1>Sign up</h1>
 				<div class="two-forms-container">
-					<a href="#" class="social social-facebook-icon"><i class="facebook"></i></a>
-					<a href="#" class="social social-google-icon"><i class="google"></i></a>
+					<a href="#" class="social social-facebook-icon hvr-buzz-out"><i class="facebook"></i></a>
+					<a href="#" class="social social-google-icon hvr-buzz-out"><i class="google"></i></a>
 				</div>
 				<span>or use your email for registration</span>
 				<input type="text" placeholder="Name" class="hvr-bounce-in"/>
@@ -22,8 +22,8 @@
 			<form action="#">
 				<h1>Log in</h1>
 				<div class="two-forms-container">
-					<a href="#" class="social social-facebook-icon"><i class="facebook"></i></a>
-					<a href="#" class="social social-google-icon"><i class="google"></i></a>
+					<a href="#" class="social social-facebook-icon hvr-buzz-out"><i class="facebook"></i></a>
+					<a href="#" class="social social-google-icon hvr-buzz-out"><i class="google"></i></a>
 				</div>
 				<span>or use your account</span>
 				<input type="email" placeholder="Email" class="hvr-bounce-in"/>
@@ -40,7 +40,7 @@
 					<button class="ghost hvr-backward" id="signIn">Sign In</button>
 				</div>
 				<div class="overlay-panel overlay-right">
-					<h2>Want hassle-free bus reservation?</h2>
+					<h2>Want a hassle-free bus reservation?</h2>
 					<p>Just choose a bus, reserve, pay, and you're ready to go!</p>
 					<button class="ghost hvr-forward" class="hvr-bounce-in" id="signUp">Sign up</button>
 				</div>
